--- a/Pages/Contact.cshtml
+++ b/Pages/Contact.cshtml
@@ -1,4 +1,4 @@
-@page
+﻿@page
 @model ContactModel
 @{
     ViewData["Title"] = "Contact Us";
@@ -6,5 +6,6 @@
 
 
 <div>
+    <a href="mailto:welcome@welcome.com">Email</a>
     <a href="mailto:welcome@welcome.com">Email</a>
 </div>
